--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "uaa-association-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
