--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "express": "^4.17.1",
+    "material-table": "^1.69.2",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-table": "^6.11.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
