--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "uaa-association-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "^4.0.0-alpha.11",
@@ -13,6 +12,7 @@
     "chart.js": "^2.9.4",
     "express": "^4.17.1",
     "material-table": "^1.69.2",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
