--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-icons": "^4.1.0",
     "react-responsive-animate-navbar": "^1.1.8",
     "react-router-dom": "^5.2.0",
